atualizando nav e estilo da section inicio

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja LF Componentes</title>
     <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Rubik+Mono+One&display=swap');
+        </style>
 </head>
 <body>
 
-    <section id="inicio">
-        <h1>Loja LF Componentes</h1>
-        
-            <nav id="menu">
-                <a href="#">teste</a>
-                <a href="#">teste</a>
-                <a href="#">teste</a>
-                <a href="#">teste</a>
-            </nav>
-        
-    </section>
+        <h1 id="title01" >LOJA LF COMPONENTES</h1>
+
+    <nav id="menu">
+        <a href="#">teste</a>
+        <a href="#">teste</a>
+        <a href="#">teste</a>
+        <a href="#">teste</a>
+    </nav>
 
     <h2>Produtos</h2>
 </body>
