atualizando estilo subTitle01 e criando nova section productsHome

--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
         <h1 id="title01" >LOJA LF COMPONENTES</h1>
 
     <nav id="menu">
-        <a href="#">teste</a>
-        <a href="#">teste</a>
-        <a href="#">teste</a>
-        <a href="#">teste</a>
+        <a href="#">Acessórios</a>
+        <a href="#">Promoções</a>
+        <a href="#">Contato</a>
+        <a href="#">Login</a>
     </nav>
 
-    <h2>Produtos</h2>
+        <h2 id="subTitle01">Produtos</h2>
+
+        <section id="productsHome">
+
+        </section>
 </body>
 </html>
