--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#">Acessórios</a>
         <a href="#">Promoções</a>
         <a href="#">Contato</a>
-        <a href="#">Login</a>
+        <a href="login.html">Login</a>
     </nav>
 
         <h2 id="subTitle01">Produtos</h2>
