centralizando productsHome e organizando style

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 
         <section id="productsHome">
 
-            <a href="#"><img src="imagensprodutos/br-11134207-7r98o-lzklibev7jup18.webp" alt="Tesoura"></a>
-            <a href="#"><img src="imagensprodutos/br-11134207-7r98o-lzp7dbsskeud21.webp" alt="Agulhas"></a>
-            <a href="#"><img src="imagensprodutos/br-11134207-7r98o-m0w03b15t7kw60.webp" alt="Linhas"></a>
+            <abbr title="Tesouras"><a href="#"><img src="imagensprodutos/br-11134207-7r98o-lzklibev7jup18.webp" alt="Tesouras"></a></abbr>
+            <abbr title="Agulhas"><a href="#"><img src="imagensprodutos/br-11134207-7r98o-lzp7dbsskeud21.webp" alt="Agulhas"></a></abbr>
+            <abbr title="Linhas"><a href="#"><img src="imagensprodutos/br-11134207-7r98o-m0w03b15t7kw60.webp" alt="Linhas"></a></abbr>
 
-        </section>
+        </section> 
 </body>
 </html>
