tentando animar imagens productsHome

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
         <section id="productsHome">
 
-            <abbr title="Tesouras"><a href="#"><img src="imagensprodutos/br-11134207-7r98o-lzklibev7jup18.webp" alt="Tesouras"></a></abbr>
-            <abbr title="Agulhas"><a href="#"><img src="imagensprodutos/br-11134207-7r98o-lzp7dbsskeud21.webp" alt="Agulhas"></a></abbr>
-            <abbr title="Linhas"><a href="#"><img src="imagensprodutos/br-11134207-7r98o-m0w03b15t7kw60.webp" alt="Linhas"></a></abbr>
+            <abbr title="Tesouras"><a href="#"><img src="imagensprodutos/br-11134207-7r98o-lzklibev7jup18.webp"></a></abbr>
+           <abbr title="Agulhas"><a href="#"><img src="imagensprodutos/br-11134207-7r98o-lzp7dbsskeud21.webp" alt="Agulhas" id="agulhas"></a></abbr> 
+            <abbr title="Linhas"><a href="#"><img src="imagensprodutos/br-11134207-7r98o-m0w03b15t7kw60.webp" alt="Linhas" id="linhas"></a></abbr>
 
         </section> 
 </body>
