--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
 
         <section id="productsHome">
 
-            <abbr title="Tesouras"><a href="#"><img src="imagensprodutos/br-11134207-7r98o-lzklibev7jup18.webp" onmouseover="this.src='imagensprodutos/br-11134207-7r98o-lzrzqyx9zyqd17.webp';" onmouseout="this.src='imagensprodutos/br-11134207-7r98o-lzklibev7jup18.webp';"></a></abbr>
+            <abbr title="Tesouras"><a href="#"><img src="imagensprodutos/br-11134207-7r98o-lzklibev7jup18-removebg-preview.png" onmouseover="this.src='imagensprodutos/br-11134207-7r98o-lzrzqyx9zyqd17-removebg-preview.png';" onmouseout="this.src='imagensprodutos/br-11134207-7r98o-lzklibev7jup18-removebg-preview.png';"></a></abbr>
 
-           <img src="imagensprodutos/br-11134207-7r98o-lzp7dbsskeud21.webp" alt="Agulhas" id="agulhas" onmouseover="this.src='imagensprodutos/br-11134207-7r98o-lzp7dbssomjp83@resize_w450_nl.webp';" onmouseout="this.src='imagensprodutos/br-11134207-7r98o-lzp7dbsskeud21.webp';">
+           <img src="imagensprodutos/br-11134207-7r98o-lzp7dbsskeud21-removebg-preview.png" alt="Agulhas" id="agulhas" onmouseover="this.src='imagensprodutos/br-11134207-7r98o-lzp7dbssomjp83_resize_w450_nl-removebg-preview.png';" onmouseout="this.src='imagensprodutos/br-11134207-7r98o-lzp7dbsskeud21-removebg-preview.png';">
 
-            <abbr title="Linhas"><a href="#"><img src="imagensprodutos/br-11134207-7r98o-m0w03b15t7kw60.webp" alt="Linhas" id="linhas" onmouseover="this.src='imagensprodutos/br-11134207-7r98o-m0vztrfsw48ne1.webp';" onmouseout="this.src='imagensprodutos/br-11134207-7r98o-m0w03b15t7kw60.webp';"></a></abbr>
+            <abbr title="Linhas"><a href="#"><img src="imagensprodutos/br-11134207-7r98o-m0w03b15t7kw60-removebg-preview.png" alt="Linhas" id="linhas" onmouseover="this.src='imagensprodutos/br-11134207-7r98o-m0vztrfsw48ne1-removebg-preview.png';" onmouseout="this.src='imagensprodutos/br-11134207-7r98o-m0w03b15t7kw60-removebg-preview.png';"></a></abbr>
 
         </section> 
 </body> 
