--- a/login.html
+++ b/login.html
@@ -12,10 +12,11 @@
 
         <h1>Login</h1>
 
-        Email: <input type="email" name="email" id="iemail" required> <br>
-        Senha: <input type="password" name="password" id="ipassword"> <br><br>
-
-        <input type="submit" name="submit" id="isubmit" value="entrar">
+        <form action="" method="get">
+            Email: <input type="email" name="email" id="iemail" required> <br>
+            Senha: <input type="password" name="password" id="ipassword"> <br><br>
+            <input type="submit" name="submit" id="isubmit" value="entrar">
+        </form>
         
     </section>
 </body>
