--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
 
         <h2 id="subTitle01">Produtos</h2>
 
+        <div id="backgroundProductsHome">
+
+            <img src="imagensprodutos/pexels-pixabay-461035.jpg" alt="Background Tesoura">
+
+        </div>
+
         <section id="productsHome">
 
             <abbr title="Tesouras"><a href="#"><img src="imagensprodutos/br-11134207-7r98o-lzklibev7jup18-removebg-preview.png" onmouseover="this.src='imagensprodutos/br-11134207-7r98o-lzrzqyx9zyqd17-removebg-preview.png';" onmouseout="this.src='imagensprodutos/br-11134207-7r98o-lzklibev7jup18-removebg-preview.png';"></a></abbr>
